feat: agregue la primera version del perfil, material librerias y una v1 sin funcionar de cambiar password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="Mapa">Mapa</string>
     <string name="Perfil">Perfil</string>
     <string name="salir">Salir</string>
+    <string name="profile_picture">Foto de perfil</string>
+    <string name="phone">Telefono</string>
 </resources>
